--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -4,4 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+alloy-primitives = { workspace = true }
 alloy-sol-types = { workspace = true }
