--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 alloy-sol-types = { workspace = true }
 sp1-zkvm = "4.1.7"
 fibonacci-lib = { path = "../lib" }
+alloy-primitives = { workspace = true }
