--- a/script/Cargo.toml
+++ b/script/Cargo.toml
@@ -29,6 +29,12 @@ turbo-sp1 = { path = "../turbo-sp1" }
 dotenv = "0.15.0"
 warp = "0.3"
 tokio = { version = "1", features = ["full"] }
+substrate-bn = { git = "https://github.com/sp1-patches/bn", tag = "patch-0.6.0-sp1-4.0.0" }
+bls12_381 = { git = "https://github.com/sp1-patches/bls12_381", tag = "patch-0.8.0-sp1-4.0.0-v2", features = [
+  "experimental",
+] }
+ff = "0.13"
+rand = "0.8"
 
 [build-dependencies]
 sp1-build = "4.1.7"
