--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2021"
 alloy-primitives = { workspace = true }
 alloy-sol-types = { workspace = true }
 tiny-keccak = { workspace = true }
-turbo-sp1-program = { path = "../turbo-sp1-program" }
+turbo-program = { path = "../turbo-program" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
