--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -9,4 +9,4 @@ sp1-zkvm = { workspace = true }
 game-lib = { path = "../lib" }
 alloy-primitives = { workspace = true }
 tiny-keccak = { workspace = true }
-turbo-sp1-program = { path = "../turbo-sp1-program" }
+turbo-program = { path = "../turbo-program" }
