--- a/turbo-program/Cargo.toml
+++ b/turbo-program/Cargo.toml
@@ -11,3 +11,4 @@ cfg-if = "1.0.0"
 crypto-bigint = { git = "https://github.com/sp1-patches/RustCrypto-bigint", tag = "patch-0.5.5-sp1-4.0.0" }
 substrate-bn = { git = "https://github.com/sp1-patches/bn", tag = "patch-0.6.0-sp1-4.0.0" }
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
